lib/src/compiler/tests/testdata/errors/156.out
error[E014]: invalid regular expression
 --> line:3:21
  |
3 |       "abc" matches /([a-z]{1000}){1000}/
  |                     ^^^^^^^^^^^^^^^^^^^^^ regex is too large